--- a/index.html
+++ b/index.html
@@ -196,85 +196,92 @@
           <div class="timeline-panel left">
             <h4>Customer Case</h4>
             <p>tbd</p>
-            <span class="date">Customer Case – to be defined | <b>11:30 - 12:15</b></span>
+            <span class="date">medpex Versandapotheke | <b>11:30 - 12:15</b></span>
           </div>
         </li>
               <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
-            <h4>Lunch</h4>
+            <h4>Coffee Break</h4>
             <p>All</p>
-            <span class="date"><b>12:15 - 13:15</b></span>
+            <span class="date"><b>12:15 - 12:30</b></span>
           </div>
         </li>
             <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
             <h4>Panel</h4>
             <p>Moderator: Patrick Singer</p>
-            <span class="date">Measurement & Attribution projects - how to tackle in different departments and with agencies | <b>13:15 - 14:00</b></span>
+            <span class="date">Measurement & Attribution projects - how to tackle in different departments and with agencies | <b>12:30 - 13:25</b></span>
           </div>
         </li>
-              <li class="animated hiding" data-animation="fadeInRight">
+		 <li class="animated hiding" data-animation="fadeInRight">
+          <div class="timeline-panel right">
+            <h4>Lunch</h4>
+            <p>All</p>
+            <span class="date"><b>13:30-14:30 </b>  </span>
+          </div>
+        </li>
+              <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel right">
             <h4>Breakout</h4>
             <p>Dirk Bruns</p>
-            <span class="date"><b>14:00 - 14:45 </b>| How to make branding measurable  </span>
+            <span class="date"><b>14:30 - 15:15 </b>| How to make branding measurable  </span>
           </div>
         </li>
-           <li class="animated hiding" data-animation="fadeInRight">
+           <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel right">
             <h4>Breakout</h4>
             <p>Dr. Thomas Steiner</p>
-            <span class="date"><b>14:00 - 14:45 </b>| Automation by Google: Automate your AdWords campaign with AdWords Scripts</span>
+            <span class="date"><b>14:30 - 15:15 </b>| Automation by Google: Automate your AdWords campaign with AdWords Scripts</span>
           </div>
         </li>
-            <li class="animated hiding" data-animation="fadeInRight">
+            <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel right">
             <h4>Breakout</h4>
             <p>Denis Dautaj</p>
-            <span class="date"><b>14:00 - 14:45</b> | Automation by Google: AdWords Smart Bidding & DoubleClick Bid Strategies</span>
-          </div>
-        </li>
-            <li class="animated hiding" data-animation="fadeInLeft">
-          <div class="timeline-panel left">
-            <h4>Coffee Break</h4>
-            <p>All</p>
-            <span class="date"><b>14:45 - 15:15</b></span>
+            <span class="date"><b>14:30 - 15:15</b> | Automation by Google: AdWords Smart Bidding & DoubleClick Bid Strategies</span>
           </div>
         </li>
             <li class="animated hiding" data-animation="fadeInRight">
+          <div class="timeline-panel left">
+            <h4>Coffee Break</h4>
+            <p>All</p>
+            <span class="date"><b>15:15 - 15:30</b></span>
+          </div>
+        </li>
+            <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel right">
             <h4>Breakout</h4>
             <p>Jan Wittek</p>
-            <span class="date"><b> 15:15 - 16:00</b> | Google Analytics 360 Suite and Cross-Channel Attribution (incl. How to become Reseller)</span>
+            <span class="date"><b> 15:30 - 16:15</b> | Google Analytics 360 Suite and Cross-Channel Attribution (incl. How to become Reseller)</span>
           </div>
         </li>
-           <li class="animated hiding" data-animation="fadeInRight">
+           <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel right">
             <h4>Breakout </h4>
             <p>Miriam Tappe</p>
-            <span class="date"><b>15:15 - 16:00 </b>| Measuring Customer Journey from Online to your Store </span>
+            <span class="date"><b>15:30 - 16:15 </b>| Measuring Customer Journey from Online to your Store </span>
           </div>
         </li>
             
-            <li class="animated hiding" data-animation="fadeInLeft">
+            <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel left">
             <h4>Keynote</h4>
             <p>Murtaza Lukmani</p>
-            <span class="date">The Future of Attribution | <b>16:00 - 16:45</b></span>
+            <span class="date">The Future of Attribution | <b>16:15 - 17:00</b></span>
           </div>
         </li>
-	   <li class="animated hiding" data-animation="fadeInRight">
+	   <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel right">
             <h4>Wrap Up</h4>
             <p>Petri Kokko</p>
-		  <span class="date"><b>16:45 - 17:00</b></span>
+		  <span class="date"><b>17:00 - 17:15</b></span>
           </div>
         </li>
-	<li class="animated hiding" data-animation="fadeInLeft">
+	<li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel left">
             <h4>Networking</h4>
             <p>All</p>
-            <span class="date"><b>17:00 - 17:45</b></span>
+            <span class="date"><b>17:15 - 17:45</b></span>
           </div>
         </li>
 	<!--<li class="animated hiding" data-animation="fadeInRight">
