--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           <div class="timeline-panel left">
             <h4>Welcome</h4>
             <p>Petri Kokko</p>
-            <span class="date">From conversion to customer-centric Marketing | <b>10:30 – 10:45</b></span>
+            <span class="date">From conversion- to customer-centric Marketing | <b>10:30 – 10:45</b></span>
           </div>
         </li>
         	<!--<li class="year">Di.</li> -->
