--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           <div class="timeline-panel left">
             <h4>Panel</h4>
             <p>Moderator: Patrick Singer</p>
-            <span class="date">Measurement & Attribution projects - how to tackle in different departments and with agencies | <b>12:30 - 13:25</b></span>
+            <span class="date">Measurement & Attribution projects - how to tackle in different departments and with agencies |<br> <b>12:30 - 13:25</b></span>
           </div>
         </li>
 		 <li class="animated hiding" data-animation="fadeInRight">
