--- a/index.html
+++ b/index.html
@@ -221,21 +221,21 @@
           </div>
         </li>
               <li class="animated hiding" data-animation="fadeInLeft">
-          <div class="timeline-panel right">
+          <div class="timeline-panel left">
             <h4>Breakout</h4>
             <p>Dirk Bruns</p>
             <span class="date"><b>14:30 - 15:15 </b>| How to make branding measurable  </span>
           </div>
         </li>
            <li class="animated hiding" data-animation="fadeInLeft">
-          <div class="timeline-panel right">
+          <div class="timeline-panel left">
             <h4>Breakout</h4>
             <p>Dr. Thomas Steiner</p>
             <span class="date"><b>14:30 - 15:15 </b>| Automation by Google: Automate your AdWords campaign with AdWords Scripts</span>
           </div>
         </li>
             <li class="animated hiding" data-animation="fadeInLeft">
-          <div class="timeline-panel right">
+          <div class="timeline-panel left">
             <h4>Breakout</h4>
             <p>Denis Dautaj</p>
             <span class="date"><b>14:30 - 15:15</b> | Automation by Google: AdWords Smart Bidding & DoubleClick Bid Strategies</span>
