--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
            <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
             <h4>Customer Case</h4>
-            <p>tbd</p>
-            <span class="date">medpex Versandapotheke | <b>11:30 - 12:15</b></span>
+            <p>medpex Versandapotheke </p>
+            <span class="date"> <b>11:30 - 12:15</b></span>
           </div>
         </li>
               <li class="animated hiding" data-animation="fadeInRight">
@@ -210,7 +210,7 @@
           <div class="timeline-panel left">
             <h4>Panel</h4>
             <p>Moderator: Patrick Singer</p>
-            <span class="date">Measurement & Attribution projects - how to tackle in different departments and with agencies |<br> <b>12:30 - 13:25</b></span>
+            <span class="date">Measurement & Attribution projects - how to tackle in different departments and with agencies <br> <b>12:30 - 13:25</b></span>
           </div>
         </li>
 		 <li class="animated hiding" data-animation="fadeInRight">
@@ -224,7 +224,7 @@
           <div class="timeline-panel left">
             <h4>Breakout</h4>
             <p>Dirk Bruns</p>
-            <span class="date"><b>14:30 - 15:15 </b>| How to make branding measurable  </span>
+            <span class="date">How to make branding measurable |  <b>14:30 - 15:15 </b> </span>
           </div>
         </li>
            <li class="animated hiding" data-animation="fadeInLeft">
