--- a/index.html
+++ b/index.html
@@ -231,14 +231,14 @@
           <div class="timeline-panel left">
             <h4>Breakout</h4>
             <p>Dr. Thomas Steiner</p>
-            <span class="date"><b>14:30 - 15:15 </b>| Automation by Google: Automate your AdWords campaign with AdWords Scripts</span>
+            <span class="date"> Automation by Google: Automate your AdWords campaign with AdWords Scripts | <b>14:30 - 15:15 </b></span>
           </div>
         </li>
             <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
             <h4>Breakout</h4>
             <p>Denis Dautaj</p>
-            <span class="date"><b>14:30 - 15:15</b> | Automation by Google: AdWords Smart Bidding & DoubleClick Bid Strategies</span>
+            <span class="date"> Automation by Google: AdWords Smart Bidding & DoubleClick Bid Strategies | <b>14:30 - 15:15</b></span>
           </div>
         </li>
             <li class="animated hiding" data-animation="fadeInRight">
@@ -252,14 +252,14 @@
           <div class="timeline-panel left">
             <h4>Breakout</h4>
             <p>Jan Wittek</p>
-            <span class="date"><b> 15:30 - 16:15</b> | Google Analytics 360 Suite and Cross-Channel Attribution (incl. How to become Reseller)</span>
+            <span class="date"> Google Analytics 360 Suite and Cross-Channel Attribution (incl. How to become Reseller) | <b> 15:30 - 16:15</b></span>
           </div>
         </li>
            <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
             <h4>Breakout </h4>
             <p>Miriam Tappe</p>
-            <span class="date"><b>15:30 - 16:15 </b>| Measuring Customer Journey from Online to your Store </span>
+            <span class="date"> Measuring Customer Journey from Online to your Store | <b>15:30 - 16:15 </b> </span>
           </div>
         </li>
             
@@ -267,7 +267,7 @@
           <div class="timeline-panel right">
             <h4>Keynote</h4>
             <p>Murtaza Lukmani</p>
-            <span class="date">The Future of Attribution | <b>16:15 - 17:00</b></span>
+            <span class="date"> <b>16:15 - 17:00 | The Future of Attribution</b></span>
           </div>
         </li>
 	   <li class="animated hiding" data-animation="fadeInLeft">
