--- a/index.html
+++ b/index.html
@@ -567,7 +567,7 @@
           </li>
 	<li class="animated hiding" data-animation="flipInX" data-delay="2000">
             <a href="#service5" data-toggle="tab">
-              <img src = "images/team/JanWittek.png" class="img-circle" align="middle" width="100%">
+              <img src = "images/team/Patrick_Singer.jpg" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
 		<li class="animated hiding" data-animation="flipInX" data-delay="2500">
@@ -605,8 +605,8 @@
             <p>Solution Specialist Automation & Attribution<br />
 					</div>  
 	<div class="tab-pane fade" id="service5">
-            <h3>Jan Wittek</h3>
-            <p>Head of Google Analytics 360 Sales, DACH & CEE<br />	
+            <h3>Patrick Singer</h3>
+            <p>Program Developer, Google Digital Academy<br />	
 					</div> 
 			  <div class="tab-pane fade" id="service6">
             <h3>Dirk Bruns</h3>
