--- a/index.html
+++ b/index.html
@@ -585,6 +585,11 @@
               <img src = "images/team/DennisDautaj.jpg" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
+		<li class="animated hiding" data-animation="flipInX" data-delay="2500">
+            <a href="#service9" data-toggle="tab">
+              <img src = "images/team/Ilona_Bildt.jpg" class="img-circle" align="middle" width="100%">
+            </a>            
+          </li>
 		
         </ul>
         <div class="tab-content animated hiding" id="service-detail" data-animation="fadeInUp">
@@ -619,6 +624,10 @@
 		 <div class="tab-pane fade" id="service8">
             <h3>Denis Dautaj</h3>
             <p>Search Audience & Automation, Central Europe<br />	
+          </div>
+		 <div class="tab-pane fade" id="service9">
+            <h3>Ilona van de Bildt</h3>
+            <p>Solutions Engineer Google Analytics 360<br />	
           </div>
           </div>
         </div>
