--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
            <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
             <h4>Customer Case</h4>
+		   <p>Moderator: Miriam Tappe</p>
             <p>medpex Versandapotheke </p>
             <span class="date"> <b>11:30 - 12:15</b></span>
           </div>
