--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
             <h4>Breakout</h4>
-            <p>Jan Wittek</p>
+            <p>Rizwan Syed, Ilona van de Bildt</p>
             <span class="date"> Google Analytics 360 Suite and Cross-Channel Attribution (incl. How to become Reseller) | <b> 15:30 - 16:15</b></span>
           </div>
         </li>
@@ -591,6 +591,11 @@
               <img src = "images/team/Ilona_Bildt.jpg" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
+			<li class="animated hiding" data-animation="flipInX" data-delay="2500">
+            <a href="#service10" data-toggle="tab">
+              <img src = "images/team/RizSyed.jpg" class="img-circle" align="middle" width="100%">
+            </a>            
+          </li>
 		
         </ul>
         <div class="tab-content animated hiding" id="service-detail" data-animation="fadeInUp">
@@ -629,6 +634,10 @@
 		 <div class="tab-pane fade" id="service9">
             <h3>Ilona van de Bildt</h3>
             <p>Solutions Engineer Google Analytics 360<br />	
+          </div>
+		 <div class="tab-pane fade" id="service10">
+            <h3>Rizwan Syed </h3>
+            <p>Sr. Account Executive Google Analytics 360<br />	
           </div>
           </div>
         </div>
