Un-doctorify me ;-)

--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
             <p>Head of Branding Solutions<br />	
           </div>
 		 <div class="tab-pane fade" id="service7">
-            <h3>Dr. Thomas Steiner</h3>
+            <h3>Thomas Steiner</h3>
             <p>Customer Solutions Engineer<br />	
           </div>
 		 <div class="tab-pane fade" id="service8">
